# University-Stankin-Cources

./: .gitignore  CMakeLists.txt  README.md  ap_lab_2.pro  main.cpp  main.py
files/: clinic.json  clinic.xml
src/: json_handler.py  macaddressfinder.cpp  macaddressfinder.h  main.cpp  objs.py  resources.qrc  xml_handler.py
src/test_assets/: example.txt
test/: tst_macaddresstest.cpp
